--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
       <!-- Insert embeddable code here -->
+      <div id='emeritus-iframe-3'><script>var a = document.createElement('iframe');a.src = 'http://localhost:3000/iframes/custom_forms/3/custom_form_entries/new' + window.location.search;document.getElementById('emeritus-iframe-3').appendChild(a);</script></div>
     </main>
   </body>
 </html>
